refactor: response record형으로 변경